# mwra-wastewater-scraper

./: README.md  pyproject.toml
output/: latest.csv  mwra-data-20220105.csv  mwra-data-20220106.csv  mwra-data-20220111.csv  mwra-data-20220113.csv  mwra-data-20220119.csv  mwra-data-20220217.csv  mwra-data-20220218.csv  mwra-data-20220219.csv  mwra-data-20220223.csv  mwra-data-20220224.csv  mwra-data-20220225.csv  mwra-data-20220301.csv  mwra-data-20220303.csv  mwra-data-20220305.csv  mwra-data-20220308.csv  mwra-data-20220309.csv  mwra-data-20220310.csv  mwra-data-20220311.csv  mwra-data-20220313.csv  mwra-data-20220315.csv  mwra-data-20220316.csv  mwra-data-20220317.csv  mwra-data-20220319.csv  mwra-data-20220322.csv  mwra-data-20220328.csv  mwra-data-20220329.csv  mwra-data-20220329a.csv  mwra-data-20220330.csv  mwra-data-20220331.csv  mwra-data-20220402.csv  mwra-data-20220405.csv  mwra-data-20220406.csv  mwra-data-20220409.csv  mwra-data-20220412.csv  mwra-data-20220413.csv  mwra-data-20220415.csv  mwra-data-20220420.csv  mwra-data-20220422.csv  mwra-data-20220423.csv  (+165 more)
wastewater/: __main__.py
